# wasm-demo-2

./: Cargo.toml  Dockerfile  README.md  flake.nix  pod.yaml
src/: main.rs
