[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-macros = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-util = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip" }

[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.5.15", features = ["headers"] }
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

